@@ -1,3 +1,4 @@
+display_error = On
 auto_globals_jit = Off
 
 [xcache]
